Fix visible problem of LearnHeader homepage link when using mobile screen

--- a/src/styles/components/LearnHeader.scss
+++ b/src/styles/components/LearnHeader.scss
@@ -24,7 +24,7 @@
         display: none;
       }
 
-      a[href="#/"] {
+      a[href="/"] {
         display: flex;
       }
     }
